completed openapi spec and UI. tested system from openapi side
